--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <h1><span>C</span><span>u</span><span>b</span><span>e</span><span> </span><span>3</span><span>6</span><span>0</span>
+    <h1>Cube 360
     </h1>
   </header>
   <div class="scene">
