--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="b7"></div>
         <div class="b8"></div>
         <div class="b9"></div>
-        <label for="toggleRotate"><img class="rotateD" src="images/rotateD.png"/></label>
-        <label for="toggleRotate"><img class="rotateL" src="images/rotateL.png"/></label>
+        <label for="toggleRotate"><img class="rotateD" src="imgs/rotateD.png"/></label>
+        <label for="toggleRotate"><img class="rotateL" src="imgs/rotateL.png"/></label>
       </div>
       <div class="back">
         <div class="b1"></div>
